# Portfolio

./: .dockerignore  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc  404.html  CLAUDE.md  Dockerfile  LICENSE  LICENSE-CC-BY-4.0  README.md  docker-compose.yml  docusaurus.config.ts  generate_migration_data.py  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  sidebars.ts  sitemap.xml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.github/workflows/: ci.yml  test-ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
blog/: 2026-01-17-welcome.md  _template.mdx  authors.yml  index.html  tags.yml
conf_manage/: saltstack_commands.md
docs/: aws_cli_commands.md  bash_profile.md  carvel_commands.md  index.md  kubectl_commands.md  statistics.py
general/: bash_profile.md  git_commands.md
guides/: index.html
k8s/: docker_commands.md  helm_commands.md  kubectl_commands.md
migration-plan/: AUDIT_MKDOCS_DEPENDENCIES.md  MOVE_V2_TO_ROOT.md
migration-planning/: content_inventory.csv  static_assets.csv  url_mapping.csv
search/: search_index.json
v2/: Dockerfile  README.md  docker-compose.yml  docusaurus.config.ts  package-lock.json  package.json
(+256 files in other folders)
