[project]
name = "juanpipe"
version = "0.1.0"
description = "Juan Felipe Gómez Manzanares | Professional Portfolio & Technical Blog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.7.2",
    "mkdocs-exclude>=1.0.2",
    "playwright>=1.57.0",
    "ghp-import>=2.1.0",
]
